--- a/css/main.css
+++ b/css/main.css
@@ -50,16 +50,19 @@ p {
 
 /*The widths are in a percentage!*/
 header {
-	
+	width: 100%;
 	margin: 0 auto;
+	text-align: center;
 	display: flex;
 	flex-flow: column wrap;
+
 
 }
 
 header h1 {
 	border-bottom: 3px solid #77a466;
 	margin: 0;
+	text-align: center;
 	padding: 20px 0;
 	flex-basis: inherit;
 	justify-content: center;
@@ -159,11 +162,7 @@ header nav ul li a{
 	width: 100%;
 	height: auto;
 	border-top: 1px solid #eee;
-	
-}
 
-.section-one h4 {
-	padding: 10px 0;
 }
 
 .section-two {
@@ -171,10 +170,6 @@ header nav ul li a{
 	border-bottom: 1px solid #eee;
 }
 
-.section-two h4,
-.section-three h4 {
-	padding: 10px 30px;
-}
 
 .menu {
 	list-style: none;
@@ -189,17 +184,20 @@ header nav ul li a{
 	color: #333;
 	font-size: 1em;
 	line-height: 21px;
+	padding: 0;
 }
 
 .address {
 	font-size: 1em;
 	line-height: 24px;
+	padding: 0;
 }
 
 /*The widths are in a percentage!*/
 footer {
 	
 	border-top: 3px solid #eee;
+	width: 100%;
 	margin: 0 auto;
 	text-align: center;
 	display: flex;
@@ -213,3 +211,71 @@ footer span {
 	color: #77a466;
 	font-size: 0.875em;
 }
+
+/*********************** OTHER DEVICES ***************/
+
+@media all and (min-width:768px) {
+			/*Tablet Styles here */
+
+.bottom-section {
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	align-items: flex-start;
+	flex-flow: row nowrap;
+
+}
+
+.section-one,
+.section-two,
+.section-three {
+	width: 30%;
+	height: auto;
+	border-top: 1px solid #eee;
+	
+
+}
+
+.section-two {
+	border-left: 1px solid #eee;
+	border-right: 1px solid #eee;
+}
+
+}
+@media all and (min-width: 1200px) {
+		/* Desktop styles here*/
+ 	.container {
+ 		width: 90%;
+ 	}
+	header {
+		width: 100%;
+		margin: 0 auto;
+		justify-content: space-between;
+		display: flex;
+		flex-flow: row wrap;
+}
+
+ 	header h1 {
+ 		border: none;
+ 		text-align: left;
+ 	}
+
+ 	header nav ul {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+
+
+  }
+
+  header nav ul {
+  	display: flex;
+  	justify-content: space-between;
+}
+
+.bottom-section {
+	width: 100%;
+}
+}
+
